WIP rescue #6994 timed-out implementation
